--- a/webapp/src/components/ProfilePage/ProfilePage.css
+++ b/webapp/src/components/ProfilePage/ProfilePage.css
@@ -22,6 +22,12 @@
   padding: 1px;
 }
 
+.ProfilePage  .profile-grid  .archive-toggle-title {
+  text-align: right;
+  display: block;
+  margin-bottom: 20px;
+}
+
 .ProfilePage .profile-grid .bids-title {
   text-transform: uppercase;
   color: var(--gray);
