--- a/webapp/src/components/ProfilePage/ProfilePage.css
+++ b/webapp/src/components/ProfilePage/ProfilePage.css
@@ -26,6 +26,7 @@
   text-align: right;
   display: block;
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .ProfilePage .profile-grid .bids-title {
