Feat: archive bids (#885)
<img width="942" alt="Screen Shot 2019-03-26 at 13 22 23" src="https://user-images.githubusercontent.com/7549152/55014727-402a1a80-4fca-11e9-81a3-13ea2716d42e.png">
<img width="948" alt="Screen Shot 2019-03-26 at 13 22 14" src="https://user-images.githubusercontent.com/7549152/55014728-402a1a80-4fca-11e9-8c6a-7eaba60cb164.png">

--- a/webapp/src/components/ProfilePage/ProfilePage.css
+++ b/webapp/src/components/ProfilePage/ProfilePage.css
@@ -22,13 +22,20 @@
   padding: 1px;
 }
 
+.ProfilePage  .profile-grid  .archive-toggle-title {
+  text-align: right;
+  display: block;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
 .ProfilePage .profile-grid .bids-title {
   text-transform: uppercase;
   color: var(--gray);
 }
 
-.ProfilePage .profile-grid .bids-title.placed {
-  margin-top: 50px
+.ProfilePage .profile-grid .cards.with-placed {
+  margin-bottom: 50px
 }
 
 .ProfilePage .pagination {
