feat: Permission loading

--- a/webapp/src/themes/components/Button.css
+++ b/webapp/src/themes/components/Button.css
@@ -53,3 +53,7 @@
   color: var(--primary);
   background: transparent;
 }
+
+.ui.loading.button:after {
+  border-color: var(--red) transparent transparent !important;
+}
