--- a/webapp/src/components/Page/Page.css
+++ b/webapp/src/components/Page/Page.css
@@ -10,3 +10,37 @@
   padding-bottom: 30px;
   background: var(--gradient);
 }
+
+.Banner {
+  position: relative;
+  background-color: rgb(105, 31, 169);
+  font-size: 14px;
+  line-height: 17px;
+  padding: 12px;
+  text-align: center;
+}
+
+.Banner br {
+  display: none;
+}
+
+.Banner .icon.close {
+  position: absolute;
+  right: 12px;
+  top: 14px;
+  cursor: pointer;
+}
+
+.Banner {
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .Banner {
+    padding: 12px 32px;
+  }
+
+  .Banner br {
+    display: block;
+  }
+}
